<resources>
    <string name="app_name">AndroidApplication</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="android_application">Android Application!</string>
</resources>